fix icon size on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -331,7 +331,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
 }
 .skill-slider .item img {
-  width: 60%;
+  width: 70%;
   margin: 0 auto 15px auto;
 }
 .background-image-left {
